# backend/src/main/java/com/p4/backend/identity/controller/auth/AuthController.java
@@ -1,0 +1,32 @@
+package com.p4.backend.identity.controller.auth;
+
+import com.p4.backend.identity.dto.JwtResponse;
+import com.p4.backend.identity.dto.LoginRequest;
+import com.p4.backend.identity.dto.RegisterRequest;
+import com.p4.backend.identity.service.auth.AuthenticationService;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.*;
+
+import jakarta.validation.Valid;
+
+@RestController
+@RequestMapping("/auth")
+@CrossOrigin(origins = "*", maxAge = 3600)
+public class AuthController {
+
+    @Autowired
+    private AuthenticationService authService;
+
+    @PostMapping("/login")
+    public ResponseEntity<JwtResponse> authenticateUser(@Valid @RequestBody LoginRequest loginRequest) {
+        JwtResponse jwtResponse = authService.authenticateUser(loginRequest);
+        return ResponseEntity.ok(jwtResponse);
+    }
+
+    @PostMapping("/register")
+    public ResponseEntity<JwtResponse> registerUser(@Valid @RequestBody RegisterRequest registerRequest) {
+        JwtResponse jwtResponse = authService.registerUser(registerRequest);
+        return ResponseEntity.ok(jwtResponse);
+    }
+}
